<resources>
    <string name="app_name">RunnersHigh</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_logout">Log Out</string>
    <string name="et_user">Username</string>
    <string name="et_password">Password</string>
    <string name="settings_icon">Settings</string>
    <string name="resources_icon">Resources</string>
    <string name="main_name">Runner\'s High</string>
    <string name="btn_proceed">Let\'s Get Started!</string>
    <string name="btn_submit_profile">Submit Profile</string>
    <string name="profile_setup">My Profile</string>
    <string name="learn_more">Learn More</string>
    <string name="help">Immediate Help</string>
    <string name="et_firstname">First Name</string>
    <string name="et_lastname">Last Name</string>
    <string name="et_weight">Weight (lbs)</string>
    <string name="time_label">TIME</string>
    <string name="distance_label">DISTANCE</string>
    <string name="calories_label">CALORIES</string>
    <string name="note_label">NOTE</string>
    <string name="btn_more_info">MORE INFO</string>
    <string name="nimh"><a href="https://www.nimh.nih.gov/index.shtml">National Institute of Mental Health</a></string>
    <string name="cdc"><a href="https://www.cdc.gov/mentalhealth/">Mental Health - CDC</a></string>
    <string name="fsu"><a href="https://counseling.fsu.edu">FSU Counseling Center</a></string>
    <string name="hotline_suicide">National Suicide Prevention Lifeline\n(+18002738255)</string>
    <string name="hotline_samhsa">SAMHSA National Helpline\n(+18006624357)</string>
    <string name="signup_blurb">
        - Track your run\n- Log your mood\n- Conquer your day!
    </string>
    <string name="welcome_blurb">
"Stressed out and want to go for a run?

Use Runner\'s High to track your run and your mood at the same!

When starting a run workout, the app will ask you your mood. Then just run like normal.
You can keep tabs on your progress with statistics and live location tracking.
Once the run is completed, fill out your new mood and feel free to look back over your
previous runs as well.

We hope this app treats you well, and enjoy your runs!

- Development Team"
    </string>
    <string name="miles">MILES</string>
    <string name="kilometers">KILOMETERS</string>
    <string name="miles_expanded">Miles (mi)</string>
    <string name="kilometers_expanded">Kilometers (km)</string>
    <string name="pace_mph">PACE (MPH)</string>
    <string name="pace_kph">PACE (KPH)</string>
    <string name="logged_in_as">Logged In As</string>
    <string name="distance_units">DISTANCE UNITS</string>
    <!-- TODO: Add more Quotes -->
    <array name="Quotes">
        <item>\"Shoot for the moon; if you miss you will die in outerspace,
            which is cool\"\n -Yekaterina Petrovna Zamolodchikova
        </item>
    </array>
    <array name="tips">
        <item>Stressed out? Try to sit down and take some deep breaths</item>
        <item>If you\'re struggling, reach out to someone you trust for support</item>
        <item>Pat yourself on the back for taking the opportunity to get out and get exercise
            today
        </item>
        <item>Take a moment to appreciate all the progress you\'ve made recently</item>
        <item>Give yourself the same forgiveness and unconditional love that you would give a friend
            or relative
        </item>
        <item>Take some time to appreciate the world around you</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back">Go Back</string>
    <string name="stress">STRESS</string>
    <string name="pre_run">Pre\nRun</string>
    <string name="post_run">Post\nRun</string>
    <string name="mood">MOOD</string>
    <string name="pre_run2">Pre-Run</string>
    <string name="post_run2">Post-Run</string>
    <string name="need_more_runs">Need More Runs</string>
    <string name="avg_stress_decrease">Avg. Stress Decrease</string>
    <string name="avg_mood_increase">Avg. Mood Increase</string>
    <string name="avg_calories_per_run">Avg. Calories per Run</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="longest_run">Longest Run</string>
    <string name="total_time">Total Time</string>
    <string name="farthest_run">Farthest Run</string>
    <string name="total_distance">Total Distance</string>
    <string name="past_10_runs">Past 10 Runs</string>
    <string name="past_5_runs">Past 5 Runs</string>
    <string name="advice_of_the_day">ADVICE OF THE DAY</string>
    <string name="before_i_felt">Before I felt:\t</string>
    <string name="now_i_feel">Now I feel:\t</string>
    <string name="save">Save</string>
    <string name="exit_without_saving">Exit without saving</string>
    <string name="notes">Notes…</string>
    <string name="rate_your_mood">Rate Your Mood</string>
    <string name="rate_your_stress_level">Rate Your Stress Level</string>
    <string name="submit">Submit</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="start_run">Start Run</string>
    <string name="post_run_mood">Post-Run Mood</string>
    <string name="pre_run_mood">Pre-Run Mood</string>
    <string name="home">Home</string>
    <string name="run">Run</string>
    <string name="history">History</string>
    <string name="profilepic">profilepic</string>
    <string name="blank_value">0.00</string>
    <string name="feed">Feed</string>
    <string name="add_comment">ADD COMMENT</string>
    <string name="comment_placeholder">Add to the conversation…</string>
</resources>