<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.StatsFragment">

    <TextView
        android:id="@+id/message2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/post_run_mood"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/message1" />

    <ImageView
        android:id="@+id/ivpostmood"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/message2"
        app:layout_constraintTop_toBottomOf="@+id/message2"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/message1"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/pre_run_mood"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivpremood"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/message1"
        app:layout_constraintTop_toBottomOf="@+id/message1"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvTimeLabelMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ivpremood"
        app:layout_constraintTop_toBottomOf="@+id/ivpremood" />

    <TextView
        android:id="@+id/tvDistanceLabelMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTimeLabelMI" />

    <TextView
        android:id="@+id/tvCaloriesLabelMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivpostmood"
        app:layout_constraintTop_toTopOf="@+id/tvDistanceLabelMI" />

    <TextView
        android:id="@+id/tvTimeMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        app:layout_constraintStart_toStartOf="@+id/tvTimeLabelMI"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeLabelMI"
        app:layout_constraintVertical_bias="0.0"
        tools:text="TIME" />

    <TextView
        android:id="@+id/tvDistanceMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTimeMI"
        tools:text="DISTANCE" />

    <TextView
        android:id="@+id/tvCaloriesMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="@+id/tvCaloriesLabelMI"
        app:layout_constraintTop_toTopOf="@+id/tvDistanceMI"
        tools:text="CALORIES" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/note_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvTimeMI"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeMI" />

    <TextView
        android:id="@+id/tvNoteMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvCaloriesMI"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="INSERT AMAZING REFLECTIVE NOTE HERE" />

</androidx.constraintlayout.widget.ConstraintLayout>