<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/mystressgraphFeed"
        android:layout_width="148dp"
        android:layout_height="162dp"
        android:layout_marginTop="4dp"
        android:rotation="90"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeRVFeed" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="21dp"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toStartOf="@+id/thebargraphFeed"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/smalllightgreencropped" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="21dp"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toStartOf="@+id/thebargraphFeed"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/angriestcropped" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="21dp"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toStartOf="@+id/thebargraphFeed"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/mediumfacecropped" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="21dp"
        android:layout_height="24dp"
        app:layout_constraintEnd_toStartOf="@+id/thebargraphFeed"
        app:layout_constraintTop_toTopOf="@+id/thebargraphFeed"
        app:srcCompat="@drawable/happiestcropped" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="21dp"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toStartOf="@+id/thebargraphFeed"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/smallorangecropped" />

    <TextView
        android:id="@+id/tvUserFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="USER NAME" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/thebargraphFeed"
        android:layout_width="154dp"
        android:layout_height="144dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCaloriesRVFeed" />

    <Button
        android:id="@+id/infobuttonFeed"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/btn_more_info"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ProgressBar
        android:id="@+id/progressBarFeed"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infobuttonFeed" />

    <TextView
        android:id="@+id/tvTimeRVFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/tvTimeTitleRVFeed"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeTitleRVFeed"
        tools:text="TIME" />

    <TextView
        android:id="@+id/tvDistanceRVFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDistanceTitleRVFeed"
        tools:text="DISTANCE" />

    <TextView
        android:id="@+id/tvTimeTitleRVFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/time_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserFeed" />

    <TextView
        android:id="@+id/tvDistanceTitleRVFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/distance_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserFeed" />

    <TextView
        android:id="@+id/tvCaloriesTitleRVFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/calories_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDistanceTitleRVFeed" />

    <TextView
        android:id="@+id/tvCaloriesRVFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/tvCaloriesTitleRVFeed"
        app:layout_constraintTop_toBottomOf="@+id/tvCaloriesTitleRVFeed"
        tools:text="CALORIES" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="110dp"
        android:layout_height="21dp"
        android:layout_marginStart="28dp"
        android:text="@string/stress"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mystressgraphFeed" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="42dp"
        android:layout_height="28dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="1dp"
        android:text="@string/pre_run"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/mystressgraphFeed"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mystressgraphFeed" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="41dp"
        android:layout_height="30dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:text="@string/post_run"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/mystressgraphFeed"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="102dp"
        android:layout_height="23dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mood"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thebargraphFeed"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvRelativeTimeFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserFeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvUserFeed"
        app:layout_constraintTop_toTopOf="@+id/tvUserFeed"
        tools:text="RELATIVE TIMESTAMP" />
</androidx.constraintlayout.widget.ConstraintLayout>